# sam3-training

./: .env.rf100vl  .env.sample  .gitignore  .gitmodules  AGENTS.md  README.md  install.sh  monitor.sh  pyproject.toml  restart.sh  run-all-scripts.sh  run.sh  run_training.sh  start.sh  stop.sh  train_chicken.sh  train_odinw.sh  train_rf100vl.sh
.cursor/commands/: fix-it.md  git-commit-and-push.md
plan/: plan.md
scripts/: README_RUN_TRAINING.md  convert_labelme_to_coco.py  organize_chicken_dataset.py  run_training.sh  task_10_environment_preparation.sh  task_11_verify_python_environment.sh  task_12_install_sam3_dependencies.sh  task_20_data_validation_and_configuration.sh  task_21_define_data_root_variables.sh  task_22_download_roboflow_dataset.sh  task_22_validate_data_directory_structure.sh  task_23_config_file_existence_check.sh  task_23_download_odinw_dataset.sh  task_23_validate_data_directory_structure.sh  task_24_config_file_existence_check.sh  task_24_validate_data_directory_structure.sh  task_25_config_file_existence_check.sh  task_30_script_argument_parsing.sh  task_31_implement_mode_selection.sh  task_32_implement_resource_allocation_flags.sh  task_33_implement_task_type_selection.sh  task_40_execution_logic_construction.sh  task_41_construct_local_training_command.sh  task_42_construct_cluster_training_command.sh  task_43_job_array_configuration.sh  task_50_post_execution_and_monitoring.sh  task_51_log_directory_feedback.sh  task_52_tensorboard_launch_helper.sh  task_61_config_path_resolution.py  task_61_config_path_resolution.sh  task_62_config_validation.py  task_62_config_validation.sh  task_63_supercategory_selection.py  task_63_supercategory_selection.sh  task_64_odinw_config_path_resolution.py  task_64_odinw_config_path_resolution.sh  task_72_training_monitoring.py  task_72_training_monitoring.sh  task_73_checkpoint_management.py  task_73_checkpoint_management.sh  (+10 more)
webapp/: README.md  SCRIPTS.md  __init__.py  job_manager.py  main.py  models.py  routes.py  run_server.sh  training_executor.py
webapp/static/: app.js  index.html  style.css
